[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Menus/MenuScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/GameOverMenuScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/Fonts/candles_.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=3]
size = 160
outline_size = 12
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="GameOverMenuScreen" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TextureRect" type="ColorRect" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.533333, 0.772549, 1, 1 )

[node name="VBoxContainer" parent="HBoxContainer" index="0"]
margin_left = 27.0
margin_right = 932.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer" index="0"]
margin_top = 30.0
margin_right = 905.0
margin_bottom = 233.0
custom_fonts/font = SubResource( 3 )
text = "Game Over"

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_top = 237.0
margin_right = 905.0
margin_bottom = 509.0

[node name="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_left = 252.0
margin_right = 653.0
margin_bottom = 272.0

[node name="TryAgainButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 401.0
margin_bottom = 88.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_pressed = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Try Again"
flat = true

[node name="TitleScreenButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 92.0
margin_right = 401.0
margin_bottom = 180.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_pressed = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Title Screen"
flat = true

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
margin_top = 184.0
margin_right = 401.0
margin_bottom = 272.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.784314, 0.784314, 0.784314, 1 )
custom_colors/font_color_pressed = Color( 0.784314, 0.784314, 0.784314, 1 )
text = "Quit"
flat = true
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
